Create maze and cell objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 set(SOURCES ${SRC_DIR}/main.cpp
             ${SRC_DIR}/game.cpp
             ${SRC_DIR}/game_object.cpp
+            ${SRC_DIR}/maze/maze.cpp
+            ${SRC_DIR}/maze/cell.cpp
             ${SRC_DIR}/utils/resource_manager.cpp
             ${SRC_DIR}/utils/shader.cpp)
 
