--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES ${SRC_DIR}/main.cpp
             ${SRC_DIR}/game_object.cpp
             ${SRC_DIR}/maze/maze.cpp
             ${SRC_DIR}/maze/cell.cpp
+            ${SRC_DIR}/objects/character.cpp
             ${SRC_DIR}/utils/resource_manager.cpp
             ${SRC_DIR}/utils/shader.cpp)
 
