--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES ${SRC_DIR}/main.cpp
             ${SRC_DIR}/objects/bomb.cpp
             ${SRC_DIR}/objects/character.cpp
             ${SRC_DIR}/objects/coin.cpp
+            ${SRC_DIR}/objects/tasks.cpp
             ${SRC_DIR}/utils/resource_manager.cpp
             ${SRC_DIR}/utils/shader.cpp
             ${SRC_DIR}/utils/text_renderer.cpp)
